// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FLOAT_CONTROL correctly with default value to empty 1`] = `
.c5 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  text-decoration: none;
}

.c5:hover {
  color: rgb(0,151,208);
}

.c5:active {
  color: rgb(0,144,198);
}

.c3 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > * {
  margin-right: 5px;
}

.c6 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c6:hover {
  background-color: rgb(0,151,208);
}

.c6:active {
  background-color: rgb(0,144,198);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 0 10px;
  line-height: 1;
  min-height: 32px;
  color: #353630;
  font-size: 1rem;
  border-color: #D1D2D3;
  box-shadow: none;
}

.c1:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c1::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c0 {
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    unit={undefined}
    value=""
  >
    <ControlNumber__Container>
      <div
        className="c0"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value=""
        >
          <input
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value=""
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="c2"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c3"
                  onClick={[Function]}
                >
                  <div
                    className="c3"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c4"
                        color="primary"
                        innerRef={undefined}
                      >
                        <a
                          className="c4 c5"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c6"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c6"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with unit 1`] = `
.c7 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  text-decoration: none;
}

.c7:hover {
  color: rgb(0,151,208);
}

.c7:active {
  color: rgb(0,144,198);
}

.c5 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c2 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 > * {
  margin-right: 5px;
}

.c8 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c8:hover {
  background-color: rgb(0,151,208);
}

.c8:active {
  background-color: rgb(0,144,198);
}

.c3 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 0 10px;
  line-height: 1;
  min-height: 32px;
  color: #353630;
  font-size: 1rem;
  border-color: #D1D2D3;
  box-shadow: none;
}

.c3:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c3::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c3::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c3:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c3::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c0 {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
}

.c1 {
  margin-bottom: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "unit": "攝氏",
      },
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0.11,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    unit="單位：攝氏"
    value={0.11}
  >
    <ControlNumber__Container>
      <div
        className="c0"
      >
        <ControlNumber__Unixtype
          color="grayBase"
        >
          <P
            className="c1"
            color="grayBase"
            innerRef={undefined}
          >
            <Component
              className="c1 c2"
              color="grayBase"
            >
              <p
                className="c1 c2"
                color="grayBase"
              >
                單位：攝氏
              </p>
            </Component>
          </P>
        </ControlNumber__Unixtype>
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0.11}
        >
          <input
            className="c3"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0.11}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="c4"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c5"
                  onClick={[Function]}
                >
                  <div
                    className="c5"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c6"
                        color="primary"
                        innerRef={undefined}
                      >
                        <a
                          className="c6 c7"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c8"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c8"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with value 1`] = `
.c5 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  text-decoration: none;
}

.c5:hover {
  color: rgb(0,151,208);
}

.c5:active {
  color: rgb(0,144,198);
}

.c3 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > * {
  margin-right: 5px;
}

.c6 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c6:hover {
  background-color: rgb(0,151,208);
}

.c6:active {
  background-color: rgb(0,144,198);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 0 10px;
  line-height: 1;
  min-height: 32px;
  color: #353630;
  font-size: 1rem;
  border-color: #D1D2D3;
  box-shadow: none;
}

.c1:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c1::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c0 {
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0.11,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    unit={undefined}
    value={0.11}
  >
    <ControlNumber__Container>
      <div
        className="c0"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0.11}
        >
          <input
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0.11}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="c2"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c3"
                  onClick={[Function]}
                >
                  <div
                    className="c3"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c4"
                        color="primary"
                        innerRef={undefined}
                      >
                        <a
                          className="c4 c5"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c6"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c6"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;

exports[`should render FLOAT_CONTROL correctly with zero 1`] = `
.c5 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  text-decoration: none;
}

.c5:hover {
  color: rgb(0,151,208);
}

.c5:active {
  color: rgb(0,144,198);
}

.c3 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > * {
  margin-right: 5px;
}

.c6 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c6:hover {
  background-color: rgb(0,151,208);
}

.c6:active {
  background-color: rgb(0,144,198);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 0 10px;
  line-height: 1;
  min-height: 32px;
  color: #353630;
  font-size: 1rem;
  border-color: #D1D2D3;
  box-shadow: none;
}

.c1:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c1::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c1::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c0 {
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_CONTROL",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlNumber
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Float only"
    unit={undefined}
    value={0}
  >
    <ControlNumber__Container>
      <div
        className="c0"
      >
        <Input
          focus={false}
          kind="primary"
          onChange={[Function]}
          placeholder="Float only"
          type="number"
          value={0}
        >
          <input
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Float only"
            type="number"
            value={0}
          />
        </Input>
        <ControlNumber__ButtonWrapper>
          <div
            className="c2"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c3"
                  onClick={[Function]}
                >
                  <div
                    className="c3"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c4"
                        color="primary"
                        innerRef={undefined}
                      >
                        <a
                          className="c4 c5"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c6"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c6"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlNumber__ButtonWrapper>
      </div>
    </ControlNumber__Container>
  </ControlNumber>
</DataChannelAdapter>
`;
